test/sema/methods/self_type_outside_struct_param.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s

fn main(x: Self): Self {}
// CHECK: [[# @LINE - 1 ]]:12: error: 'Self' is only allowed inside structs
// CHECK: [[# @LINE - 2 ]]:19: error: 'Self' is only allowed inside structs
